--- a/vr-next/app/globals.css
+++ b/vr-next/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.toggle-checkbox:checked {
+  right: 0;
+  border-color: #68D391;
+}
+.toggle-checkbox:checked + .toggle-label {
+  background-color: #68D391;
+}
